[package]
name = "mention-market"
version = "0.1.0"
description = "Prediction market for word mentions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mention_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", tag = "v0.31.1", features = ["init-if-needed"] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", tag = "v0.31.1" }
blake3 = "=1.5.5"
